--- a/src/app/users/list/list.component.html
+++ b/src/app/users/list/list.component.html
@@ -1,6 +1,29 @@
-<div class="row row-cols-1 row-cols-md-3 g-4">
+<div
+  *ngIf="loading"
+  class="alert alert-info text-center"
+  role="alert">
+  <h4 class="alert-heading">Loading...</h4>
+  <p>
+    <i class="fa fa-sync fa-spin fa-2x"></i>
+  </p>
+</div>
 
-    <div class="col" *ngFor="let user of users">
+<div
+  *ngIf="error && !loading"
+  class="alert alert-danger text-center"
+  role="alert">
+  <h4 class="alert-heading">Error</h4>
+  <pre>
+    {{ error | json }}
+  </pre>
+</div>
+
+<div
+  *ngIf="!loading"
+  class="row row-cols-1 row-cols-md-3 g-4"
+  >
+
+    <div class="col clickable" *ngFor="let user of users" (click)="selectUser(user.id)">
       <div class="card h-100">
         <img [src]="user.picture" class="card-img-top" [alt]="user.firstName">
         <div class="card-body">
